test/parser/prs/inv-01.stderr
At: "inv-01.hac":6:
parse error: syntax error
parser stacks:
state	value
#STATE#	(null) 
#STATE#	(null) 
#STATE#	keyword: defproc [3:1..7]
#STATE#	identifier: inv [3:9..11]
#STATE#	list<(port-formal-decl)>: (port-formal-decl) ... [3:12..22]
#STATE#	{ [3:24]
#STATE#	keyword: prs [4:1..3]
#STATE#	{ [4:5]
#STATE#	} [6:1]
in state #STATE#, possible rules are:
	language_body : PRS_LANG '{' . prs_body '}'  (#RULE#)
acceptable tokens are: 
	'(' (shift)
	'[' (shift)
	'~' (shift)
	ID (shift)
	TREE_LANG (shift)
	SUBCKT_LANG (shift)
