test/parser/prs/inv-01.hac
// "inv-01.hac" 
// should fail, accepts empty prs body

defproc inv(bool a, b) {
prs {
	// empty
}

prs {
	a -> b-
	~a -> b+
}
}

